movie-carousel setup

--- a/styles.scss
+++ b/styles.scss
@@ -111,6 +111,14 @@ body{
         }
     }
 
+    .movie-box{
+        height: 10%;
+        width: 10%;
+        display: block;
+    }
+
+
+
 
 
 
