--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,12 @@ body {
   margin-right: 5px;
 }
 
+.highlight .movie-box {
+  height: 10%;
+  width: 10%;
+  display: block;
+}
+
 .container {
   margin-left: 20px;
 }
