--- a/styles.scss
+++ b/styles.scss
@@ -68,13 +68,10 @@ body{
     align-items: flex-start;
 
     .container{
-        width: 700%;
+        width: 70%;
     }
 
-
-
-
-    .highlight__title{
+    &__title{
         font-size: 40px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         margin-top: 15%;
