--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,10 @@ body {
 }
 
 .highlight .container {
-  width: 700%;
+  width: 70%;
 }
 
-.highlight .highlight__title {
+.highlight__title {
   font-size: 40px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-top: 15%;
