--- a/styles.scss
+++ b/styles.scss
@@ -9,24 +9,20 @@
 
 /* CSS SETUP */
 
-
-
 :root{
-
     --main-color: #E50914;
     --background: #141414;
-
 }
 
 body{
     background: var(--background);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
 .header {
     .container {
-        border: 1px solid white;
+        // border: 1px solid white;
     }
 }
 
@@ -44,6 +40,7 @@ body{
         font-size: 40px;
         margin-left: 10px;
     }
+
     &__nav {
         a {
             text-decoration: none;
@@ -64,64 +61,85 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: solid red 1px ;
+    // border: solid red 1px ;
     align-items: flex-start;
 
-    .container{
-        width: 70%;
-    }
+        .container{
+            width: 70%;
+        }
 
-    &__title{
-        font-size: 40px;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        margin-top: 15%;
-    }
-
-    &__description{
-        margin-bottom: 40px;
-        margin-top: 10px;
-    }
-
-    
-    
-    &__buttons{
-
-        button{
-            background-color:rgba(0,0,0,.50);
-            border: none;
-            color: white;
-            padding: 15px 30px;
-            margin-right: 15px;
-            font-size: 12px;
+        &__title{
+            font-size: 40px;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            cursor: pointer;
-            transition: .3s ease all;
-        
-            &:hover{
-                background-color:rgba(255, 255, 255, 0.5);
-                color: black;
-            }
-        
-            & i{
-                margin-right: 5px;
+            margin-top: 15%;
+        }
+
+        &__description{
+            margin-bottom: 40px;
+            margin-top: 10px;
+        }
+
+    
+    
+        &__buttons{
+            button{
+                background-color:rgba(0,0,0,.50);
+                border: none;
+                color: white;
+                padding: 15px 30px;
+                margin-right: 15px;
+                font-size: 12px;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                cursor: pointer;
+                transition: .3s ease all;
+            
+                &:hover{
+                    background-color:rgba(255, 255, 255, 0.5);
+                    color: black;
+                }
+            
+                & i{
+                    margin-right: 5px;
+                }
             }
         }
+        
+     .container{
+            margin-left: 20px;
     }
+}
+
+
+
+.movie-carousel{
+    margin-top: 5px;
 
     .movie-box{
         height: 10%;
         width: 10%;
         display: block;
     }
-
-
-
-
-
-
-
 }
 
-.container{
-    margin-left: 20px;
-}
+
+
+@media screen and (max-width: 700px){
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        }
+
+        button{
+            margin-top: 5px;
+            width: 200px;
+            height: 60px;
+        }
+    }
+    @media screen and (min-width: 1000px){
+
+        highlight__description{
+            width: 50%;
+        }
+    }
